# code-forge-agent

./: README.md  main.py  pyproject.toml
src/: system_prompt.md
src/mcp/: app.py  auth.py  schema.py
