[project]
name = "code-forge-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.97",
    "fastapi>=0.136.1",
    "fastmcp>=3.2.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "pydantic-monty>=0.0.17",
    "uvicorn>=0.46.0",
]
